syntax = "proto3";

option go_package = "onboarding/common/grpc/guessers";

package guesserspb;

service guessers {
  rpc addGuesser (addGuesserRequest) returns (addGuesserResponse) {}
  rpc removeGuesser (removeGuesserRequest) returns (removeGuesserResponse) {}
  rpc queryGuesser (queryGuesserRequest) returns (queryGuesserResponse) {}
  rpc queryPrimes (queryPrimesRequest) returns (queryPrimesResponse) {}
}

message addGuesserRequest {
  int64 beginAt = 1;
  int64 incrementBy = 2;
  int64 sleep = 3;
}

message addGuesserResponse {
  int64 guesserID = 1;
}

message removeGuesserRequest {
  int64 guesserID = 1;
}

message removeGuesserResponse {
  bool ok = 1;
  int64 guesserID = 2;
}

message guess {
  int64 num = 1;
  int64 time = 2;
}

message queryGuesserRequest {
  int64 guesserID = 1;
}

message queryGuesserResponse {
  int64 guesserID = 1;
  repeated guess guessList = 2;
  bool active = 3;

}

message queryPrimesRequest {
  int64 prime = 1;
}

message primedets {
  int64 guesserID = 2;
  int64 time = 3;
  int64 originNum = 4;
}

message prime {
  int64 prime = 1;
  repeated primedets primeList =2;
}

message queryPrimesResponse {
  bool ok = 1;
  repeated prime primes = 2;
}